--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
 
     <!-- Form strings -->
     <string name="app_intro_message">Welcome to the Fizz Buzz app ! Enter your inputs and let the magic happens !</string>
+
+    <!-- Input strings -->
     <string name="first_number_input_label">First multiple</string>
     <string name="first_number_input_placeholder">1, 2, 3 …</string>
     <string name="second_number_input_label">Second multiple</string>
@@ -11,8 +13,14 @@
     <string name="first_text_input_placeholder">Fizz</string>
     <string name="second_text_input_label">Second word</string>
     <string name="second_text_input_placeholder">Buzz</string>
-    <string name="validate_form_button_text">Fizz it !</string>
+    <string name="limit_input_label">Limit</string>
+    <string name="limit_input_placeholder">Max. number of items</string>
+
+    <!-- Input error strings -->
     <string name="text_field_error_icon_content_description">Show error icon</string>
     <string name="number_input_error_message">Please enter a number, 0 is not allowed</string>
     <string name="text_input_error_message">Please enter some text</string>
+
+    <!-- Button strings -->
+    <string name="validate_form_button_text">Fizz it !</string>
 </resources>
